# star_frame

./: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  rust-toolchain.toml
advance/: Cargo.toml
advance/src/: lib.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs  new_project.rs
cli/src/template/: cargo_toml  config_toml  counter_test_rs  increment_rs  initialize_rs  lib_rs  readme_md  states_rs
common/common_proc/: Cargo.toml
common/common_proc/src/: enum_refs.rs  lib.rs  strong_typed_struct.rs  unit_enum_from_repr.rs  unpackable.rs  zero_copy_checks.rs
common/common_utils/: Cargo.toml
common/common_utils/src/: advance.rs  align1.rs  binary_heap.rs  boxed_error.rs  chain_exact.rs  custom_clock.rs  data_size.rs  error.rs  fixed_chunks.rs  lib.rs  normalize_rent.rs  option_flat_map.rs  prelude.rs  safe_zero_copy.rs  testing.rs  to_seeds.rs  token.rs  unpacked.rs
common/common_utils/src/client/: account_with_remaining.rs  instruction_with_signers.rs  mod.rs  parsed_account.rs  rpc_ext.rs  token.rs
common/common_utils/src/strong_type/: bool_wrapper.rs  enum_wrapper.rs  fixed_point.rs  key_for.rs  mod.rs  optional_key_for.rs
common/common_utils/src/util/: maybe_ref.rs  mod.rs
common/common_utils/src/versioned_account/: access.rs  account_info.rs  combined.rs  (+8 more)
example_programs/account_test/: Cargo.toml
example_programs/account_test/src/: lib.rs
example_programs/bench/: BINARY_SIZE.md  COMPUTE_UNITS.md  Cargo.toml
example_programs/bench/src/: lib.rs
example_programs/counter/: Cargo.toml  start.sh
example_programs/counter/src/: lib.rs
example_programs/faction_enlistment/: Cargo.toml  Validator.toml  start.sh
example_programs/faction_enlistment/src/: lib.rs
example_programs/marketplace/: Cargo.toml  idl.json
example_programs/marketplace/src/: lib.rs  state.rs
framework/example_programs/counter/: Cargo.toml  Coux9zxTFKZpRdFpE4F7Fs5RZ6FdaURdckwS61BUTMG.json
framework/example_programs/escrow/: Cargo.toml
framework/example_programs/faction_enlistment/: Cargo.toml  start.sh
framework/example_programs/tic_tac_toe/: Cargo.toml
framework/star_frame/: Cargo.toml  Ideas.md  build.rs
framework/star_frame/src/: align1.rs  arbitrary_struct.rs  client.rs  divisor.rs  entrypoint.rs  errors.rs  fixed_point.rs  lib.rs  macro_prelude.rs  packed_value.rs  prelude.rs  program_account.rs  seeds.rs  unit_enum_from_repr.rs  unit_val.rs  util.rs
framework/star_frame/tests/: test_program.rs
framework/star_frame_cpi/: Cargo.toml
framework/star_frame_cpi/src/: lib.rs
framework/star_frame_cpi/tests/: idl.json  idl.rs
framework/star_frame_idl/: Cargo.toml
framework/star_frame_idl/src/: account.rs  account_discriminant.rs  account_set.rs  anchor.rs  codama.rs  instruction.rs  lib.rs  seeds.rs  serde_impls.rs  ty.rs
framework/star_frame_proc/: Cargo.toml
framework/star_frame_proc/src/: account.rs  align1.rs  framework_instruction.rs  get_seeds.rs  hash.rs  instruction_set.rs  instruction_set_to_idl.rs  lib.rs  program.rs  program_account.rs  solana_pubkey.rs  star_frame_instruction.rs  ty.rs  unit_enum_from_repr.rs  unsized_enum.rs  util.rs
framework/star_frame_spl/: Cargo.toml
framework/star_frame_spl/src/: associated_token.rs  lib.rs  pod.rs  utils.rs
programs/custom_clock/: Cargo.toml
programs/custom_clock/src/: lib.rs
star_frame/: Cargo.toml  SPL.md  build.rs
star_frame/src/: align1.rs  client.rs  context.rs  cpi.rs  entrypoint.rs  errors.rs  lib.rs  prelude.rs  util.rs
star_frame/src/__private/: mod.rs
star_frame/src/account_set/: account.rs  borsh_account.rs  cpi_const_wrapper.rs  mod.rs  program.rs  rest.rs  single_set.rs  system_account.rs  sysvar.rs  validated_account.rs
star_frame/src/context/: mod.rs  solana_runtime.rs
star_frame/src/data_types/: address_for.rs  divisor.rs  fixed_point.rs  key_for.rs  mod.rs  optional_address_for.rs  optional_key_for.rs  packed_value.rs  pod_bool.rs  remaining_data.rs  unit_system.rs  unit_val.rs
star_frame/src/idl/: find_seeds.rs  mod.rs  ty.rs
star_frame/src/instruction/: mod.rs  no_op.rs  un_callable.rs
star_frame/src/program/: mod.rs  system.rs  system_program.rs
star_frame/src/syscalls/: mod.rs  solana_runtime.rs
star_frame/src/unsize/: init.rs  mod.rs  owned_ref.rs  test_helpers.rs  wrapper.rs
star_frame_cli/: Cargo.toml  README.md
star_frame_cli/src/: build_project.rs  generate_idl.rs  main.rs  new_project.rs
star_frame_cli/src/idl/: generate.rs
star_frame_cli/src/solana/: install.rs
star_frame_cli/src/template/: cargo_toml  counter_test_rs  gitignore  increment_rs  initialize_rs  lib_rs  readme_md  states_rs
star_frame_idl/: Cargo.toml  README.md
star_frame_idl/src/: account.rs  account_set.rs  codama.rs  instruction.rs  lib.rs  seeds.rs  serde_impls.rs  ty.rs
star_frame_idl/src/verifier/: mod.rs
star_frame_idl/tests/: verifier_feature_gate.rs
star_frame_idl/tests/trybuild/: verifier_feature_off.rs  verifier_feature_off.stderr
star_frame_proc/: Cargo.toml  README.md
star_frame_proc/src/: align1.rs  derivative.rs  get_seeds.rs  hash.rs  instruction_args.rs  instruction_set.rs  lib.rs  program.rs  program_account.rs  solana_address.rs  solana_pubkey.rs  star_frame_error.rs  star_frame_instruction.rs  zero_copy.rs
star_frame_proc/src/account_set/: generics.rs  mod.rs
star_frame_proc/src/idl/: instruction_to_idl.rs  type_to_idl.rs
star_frame_proc/src/unsize/: account.rs  enum_impl.rs  impl_impl.rs  mod.rs  struct_impl.rs
star_frame_proc/src/util/: generics.rs  mod.rs  paths.rs  repr.rs
star_frame_spl/: Cargo.toml  README.md
star_frame_spl/src/: associated_token.rs  lib.rs  pod.rs  prelude.rs
star_frame_spl/src/token/: instructions.rs  mod.rs  state.rs
test_programs/exclusive_map/: Cargo.toml
test_programs/exclusive_map/src/: lib.rs
tutorial/basic-0/: Cargo.toml  idl.json
tutorial/basic-0/src/: lib.rs
tutorial/basic-0/tests/: basic_0.rs
tutorial/basic-1/: Cargo.toml  idl.json
tutorial/basic-1/src/: lib.rs
tutorial/basic-1/tests/: basic_1.rs
tutorial/basic-3/puppet-master/: Cargo.toml
(+291 files in other folders)
