[workspace]
resolver = "3"
members = ["star_*", "example_programs/*"]
# members = ["star_frame", "star_frame_idl", "star_frame_proc"]

[workspace.package]
version = "0.27.0"
edition = "2021"
publish = true
rust-version = "1.84.1"
license = "Apache-2.0"
repository = "https://github.com/staratlasmeta/star_frame"

[workspace.dependencies]
# Keep the version in sync with the workspace.package.version
star_frame = { path = "star_frame", version = "0.27.0" }
star_frame_idl = { path = "star_frame_idl", version = "0.27.0" }
star_frame_spl = { path = "star_frame_spl", version = "0.27.0" }
star_frame_proc = { path = "star_frame_proc", version = "0.27.0" }

# Non workspace crates

# NO STD CRATES
advancer = "^0.1.1"
array-init = "^2.1.0"
borsh = { version = "1.5.7", default-features = false, features = ["derive"] }
bytemuck = { version = "^1.22.0", features = [
    "extern_crate_alloc",
    "min_const_generics",
    "derive",
    "impl_core_error",
] }
derive_more = { version = "^2.0.1", default-features = false, features = ["full"] }
derive-where = { version = "1.4.0" }
fixed = { package = "fixed_star_frame", version = "1.29.1" }
itertools = { version = "^0.14.0", default-features = false, features = ["use_alloc"] }
num-traits = { version = "^0.2.17", default-features = false, features = ["libm"] }
paste = "^1.0.14"
# pinocchio = { version = "0.9.2" }
pinocchio = {version = "=0.10.0-rc.1", features = ["copy", "cpi"]}
pinocchio-log = { version = "0.5.0" }
ptr_meta = { version = "0.3.0", default-features = false, features = ["derive"] }
ref-cast = "^1.0"
solana-address = { version = "1.0.0", features = [
    "decode",
    "error",
    "syscalls",
    "borsh",
    "bytemuck",
    "serde",
] }
solana-msg = { version = "3.0.0", default-features = false }
solana-program-memory = "3.0.0"
solana-instruction = "3.0.0"
static_assertions = "^1.1.0"
thiserror = { version = "2.0.7", default-features = false }
typenum = { version = "^1.17.0", features = ["no_std"] }

# IDL only
codama-nodes = { version = "^0.5.2" }
hex = "^0.4.3"
semver = { version = "^1.0.23", features = ["serde"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "^1.0.108", default-features = false, features = ["alloc"] }

# Test only
mollusk-svm = "0.6.0"
mollusk-svm-programs-token = "0.6.0"
pretty_assertions = "^1.4.0"
solana-system-interface = "2.0.0"
solana-account = "3.0.0"
solana-program-pack = "3.0.0"
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"

# CLI only crates
convert_case = "0.8.0"
clap = { version = "4.5", features = ["derive", "env"] }
eyre = "0.6.12"
colored = "3.0.0"


[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 1

[patch.crates-io]
# TODO: Replace once fixed versions are published
# pinocchio = { path = "/home/sammy/star-atlas/star_frame_working/pinocchio/sdk/pinocchio" }
