[workspace]
resolver = "3"
members = ["star_*", "example_programs/*"]

[workspace.package]
version = "0.28.0"
edition = "2021"
publish = true
rust-version = "1.84.1"
license = "Apache-2.0"
repository = "https://github.com/staratlasmeta/star_frame"

[workspace.dependencies]
# Keep the version in sync with the workspace.package.version
star_frame = { path = "star_frame", version = "0.28.0" }
star_frame_idl = { path = "star_frame_idl", version = "0.28.0" }
star_frame_spl = { path = "star_frame_spl", version = "0.28.0" }
star_frame_proc = { path = "star_frame_proc", version = "0.28.0" }

# Non workspace crates
advancer = "^0.1.0"
array-init = "^2.1.0"
borsh = { version = "1.5.7", features = ["derive"] }
bs58 = "^0.5.0"
bytemuck = { version = "^1.22.0", features = ["extern_crate_std", "min_const_generics", "derive"] }
clap = { version = "4.5", features = ["derive", "env"] }
codama-nodes = { version = "^0.5.2" }
colored = "3.0.0"
convert_case = "0.8.0"
daggy = "^0.9.0"
derive-where = { version = "1.4.0" }
derive_more = { version = "^2.0.1", features = ["full"] }
easy_proc = "^0.4.0"
eyre = "0.6.12"
fixed = { package = "fixed_star_frame", version = "1.29.1" }
heck = "^0.5.0"
hex = "^0.4.3"
itertools = "^0.14.0"
mollusk-svm = "0.7.0"
mollusk-svm-programs-token = "0.7.0"
num-traits = "^0.2.17"
paste = "^1.0.14"
pinocchio = { version = "0.9.2", features = ["std"] }
pinocchio-log = { version = "0.5.0" }
pretty_assertions = "^1.4.0"
proc-macro-crate = "^3.1.0"
proc-macro-error2 = { version = "^2.0.1", default-features = false }
proc-macro2 = "^1.0.27"
ptr_meta = "0.3.0"
quote = "^1.0.9"
ref-cast = "^1.0"
semver = { version = "^1.0.23", features = ["serde"] }
serde = { version = "^1.0.192", features = ["derive"] }
serde_json = "^1.0.108"
sha2 = "^0.10.8"
solana-account = "3.0.0"
solana-instruction = "3.0.0"
solana-keypair = "=3.0.0"
solana-program-memory = "3.0.0"
solana-program-pack = "3.0.0"
solana-pubkey = "3.0.0"
solana-signer = "=3.0.0"
solana-system-interface = "2.0.0"
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"
static_assertions = "^1.1.0"
syn = { version = "^2.0.40", features = ["extra-traits"] }
typenum = "^1.17.0"
thiserror = "2.0.7"


[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 1
