[package]
name = "advance"
version = "0.1.0"
edition = "2021"
publish = ["star-atlas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
solana = ["solana-program"]

[dependencies]
thiserror = "1.0.50"

solana-program = { version = "~1.18", optional = true }