[package]
name = "advance"
version = "0.2.0"
edition = "2021"
publish = ["star-atlas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
solana = ["solana-program"]

[dependencies]
thiserror = "2.0.3"

solana-program = { workspace = true, optional = true }