[package]
name = "star-frame"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.0"
anyhow = "1"
convert_case = "0.8.0"
solana-pubkey = "2.3.0"