[package]
name = "star_frame"
description = "A high performance Solana framework for building fast, scalable, and secure smart contracts."
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

repository.workspace = true

[features]
cleanup_rent_warning = []
idl = ["star_frame_idl", "serde_json"]
test_helpers = []
rustdoc = ["solana-system-interface"]

[dependencies]
advancer = { workspace = true }
anyhow = { workspace = true }
array-init = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
derive-where = { workspace = true }
derive_more = { workspace = true }
fixed = { workspace = true }
itertools = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
solana-pubkey = { workspace = true, features = [
    "curve25519",
    "borsh",
    "bytemuck",
] }
solana-instruction = { workspace = true }
pinocchio = { workspace = true }
star_frame_proc = { workspace = true }
static_assertions = { workspace = true }
typenum = { workspace = true }
ref-cast = { workspace = true }
ptr_meta = { workspace = true }
solana-system-interface = { workspace = true, optional = true }

# feature = idl
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
star_frame_idl = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
solana-system-interface = { workspace = true }

[package.metadata.cargo-udeps.ignore]
development = ["solana-system-interface"]
