[package]
name = "star_frame_idl"
description = "IDL definitions for Star Frame"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["anchor", "codama"]
verifier = []
anchor = ["anchor-lang-idl-spec"]
codama = ["codama-nodes", "hex"]

[dependencies]
# verifier
anchor-lang-idl-spec = { workspace = true, optional = true }
codama-nodes = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
anyhow = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
solana-pubkey = { workspace = true }
semver = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
