[package]
name = "star_frame_idl"
description = "IDL definitions for Star Frame"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

repository.workspace = true

[features]
default = ["codama"]
verifier = []
codama = ["codama-nodes", "hex"]

[dependencies]
# verifier
codama-nodes = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
anyhow = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
solana-pubkey = { workspace = true }
semver = { workspace = true }
itertools = { workspace = true }
