[package]
name = "star_frame_proc"
description = "Procedural macros for Star Frame"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

repository.workspace = true

[lib]
proc-macro = true

[features]
default = []

[dependencies]
bs58 = "^0.5.0"
daggy = "^0.9.0"
itertools = { workspace = true, features = ["use_std"] }
easy_proc = "^0.4.0"
heck = "^0.5.0"
proc-macro-crate = "^3.1.0"
proc-macro-error2 = { version = "^2.0.1", default-features = false }
proc-macro2 = "^1.0.27"
quote = "^1.0.9"
syn = { version = "^2.0.40", features = ["extra-traits"] }
sha2 = "^0.10.8"

[dev-dependencies]
pretty_assertions = { workspace = true }
star_frame = { path = "../star_frame", features = ["test_helpers", "idl"] }
bytemuck = { workspace = true }

[package.metadata.cargo-udeps.ignore]
development = ["star_frame"]
