[package]
name = "star_frame_spl"
description = "Star Frame clients and utilities for SPL programs"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

repository.workspace = true
[features]
rustdoc = ["spl-token-interface", "spl-associated-token-account-interface", "solana-program-pack"]
# todo: are these default features okay?
default = ["token"]
token = []
idl = ["star_frame/idl"]

[dependencies]
star_frame.workspace = true
borsh.workspace = true
bytemuck.workspace = true
spl-token-interface = { workspace = true, optional = true }
spl-associated-token-account-interface = { workspace = true, optional = true }
solana-program-pack = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
spl-token-interface.workspace = true
spl-associated-token-account-interface.workspace = true
solana-program-pack.workspace = true

[package.metadata.cargo-udeps.ignore]
development = ["spl-associated-token-account-interface"]
