[package]
name = "common_utils"
version = "0.1.6"
edition = "2021"
repository = "https://github.com/staratlasmeta/common_utils"
description = "Common utilities for Star Atlas programs"
license = "MPL-2.0"
publish = ["star-atlas"]

[features]
default = []
development = ["custom_clock"]

[dependencies]
anchor-lang = { version = "0.25.19", registry = "star-atlas" }
anchor-spl = { version = "0.25.19", registry = "star-atlas" }
array-init = "2.0.0"
bitflags = "2.2.1"
borsh = "0.10.3"
bytemuck = { version = "1.13.0", features = ["min_const_generics", "extern_crate_std"] }
common_proc = { path = "../common_proc", version = "0.1.5", registry = "star-atlas" }
derivative = "2.2.0"
itertools = "0.10.3"
num-traits = "0.2.15"
solana-program = "1.14.22"
spl-token = { version = "3.1.1", features = ["no-entrypoint" ]}
static_assertions = "1.1.0"
strum = "0.24.1"
thiserror = "1.0.40"

[dependencies.custom_clock]
path = "../../programs/custom_clock"
features = ["no-entrypoint"]
optional = true
version = "0.1.5"
registry = "star-atlas"

[dev-dependencies]
rand = "0.8.5"
rayon = "1.6.1"
