[package]
name = "account_test"
version = "0.0.1"
edition.workspace = true
publish = false

[package.metadata]
release.release = false

[lib]
crate-type = ["cdylib", "lib"]
name = "account_test"

[features]
prod = []
no_entrypoint = []
cpi = ["no_entrypoint"]
idl = ["star_frame/idl"]

[dependencies]
star_frame = { workspace = true }
bytemuck = { workspace = true }
