[package]
name = "counter"
version = "0.0.1"
edition.workspace = true
publish = false

[package.metadata]
release.release = false

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no_entrypoint = []
idl = ["star_frame/idl"]
locked_versions = ["star_frame/locked_versions"]

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
star_frame = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
codama-nodes.workspace = true
solana-sdk = { workspace = true }
tokio = { workspace = true }
