[package]
name = "counter"
version = "0.0.1"
edition.workspace = true
publish = false

[package.metadata]
release.release = false

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no_entrypoint = []
idl = ["star_frame/idl"]

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
star_frame = { workspace = true }

[dev-dependencies]
codama-nodes = { workspace = true }
mollusk-svm = { version = "0.3.0" }
solana-account = { workspace = true }
