[package]
name = "faction_enlistment"
version = "0.0.1"
edition.workspace = true
publish = false

[package.metadata]
release.release = false

[lib]
crate-type = ["cdylib", "lib"]
name = "faction_enlistment"

[features]
prod = []
no-entrypoint = []
cpi = ["no-entrypoint"]
idl = ["star_frame/idl", "star_frame_spl/idl"]
locked-versions = ["star_frame/locked-versions"]

[dependencies]
star_frame = { workspace = true }
star_frame_spl.workspace = true
counter = { path = "../counter", features = ["no-entrypoint"] }
bytemuck.workspace = true

[dev-dependencies]
solana-program-test.workspace = true
pretty_assertions.workspace = true
solana-sdk.workspace = true
tokio.workspace = true

# Locked for solana_program_test
litemap = { workspace = true }
zerofrom = { workspace = true }
