[package]
name = "faction_enlistment"
version = "0.0.1"
edition.workspace = true
publish = false

[package.metadata]
release.release = false

[lib]
crate-type = ["cdylib", "lib"]
name = "faction_enlistment"

[features]
prod = []
no_entrypoint = []
cpi = ["no_entrypoint"]
idl = ["star_frame/idl", "star_frame_spl/idl", "counter/idl"]
locked_versions = ["star_frame/locked_versions"]

[dependencies]
star_frame = { workspace = true }
star_frame_spl = { workspace = true }
counter = { path = "../counter", features = ["no_entrypoint"] }
bytemuck = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true }
solana-account = { workspace = true }
mollusk-svm-programs-token = { workspace = true }
pretty_assertions = { workspace = true }
