[package]
name = "star_frame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["idl"]
fake_solana_os = []
idl = ["star_frame_idl", "serde_json", "star_frame_proc/idl"]

[dependencies]
advance = { path = "../../advance", features = ["solana"] }
anyhow = "1.0.79"
array-init = "2.1.0"
bincode = { version = "1.3.3", features = ["i128"] }
borsh = "0.10.3"
bytemuck = "1.14.0"
derivative = "2.2.0"
fixed = "~1.23.0" # 1.24 requires rust 1.71
half = "~2.2.1" # 2.3 requires rust 1.71
num-traits = "0.2.17"
paste = "1.0.14"
solana-program = { workspace = true }
solana-sdk = { workspace = true }
star_frame_proc = { path = "../star_frame_proc"}
static_assertions = "1.1.0"
typenum = "1.17.0"

# feature = idl
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", optional = true }
star_frame_idl = { path = "../star_frame_idl", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
strum = { version = "0.25.0", features = ["derive"] }

[[example]]
name = "cool_example"
crate-type = ["staticlib"]
