[package]
name = "star_frame"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = ["idl", "cleanup_rent_warning", "fake_solana_os"]
fake_solana_os = []
cleanup_rent_warning = []
idl = ["star_frame_idl", "serde_json", "star_frame_proc/idl"]

[dependencies]
advance = { workspace = true }
anyhow = { workspace = true }
array-init = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
fixed = { workspace = true }
half = { workspace = true }
itertools = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
solana-program = { workspace = true }
star_frame_proc = { workspace = true }
static_assertions = { workspace = true }
typenum = { workspace = true }

# feature = idl
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
star_frame_idl = { workspace = true, optional = true }

# version locks for msrv
bumpalo = { workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
strum = { workspace = true, features = ["derive"] }

[build-dependencies]
rustc_version = { workspace = true }

[[example]]
name = "cool_example"
crate-type = ["staticlib"]
