[package]
name = "star_frame_cpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.75"
proc-macro-crate = "1.0.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.27"
quote = "1.0.9"
serde_json = "1.0.108"
star_frame_idl = { path = "../star_frame_idl", features = ["verifier"] }
syn = { version = "1.0.73", features = ["extra-traits"] }
