[package]
name = "star_frame_idl"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
verifier = ["anyhow"]

[dependencies]
# verifier
anyhow = { workspace = true, optional = true }
bincode = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
