[package]
name = "star_frame_idl"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["anchor"]
verifier = []
anchor = ["anchor-lang-idl-spec"]

[dependencies]
# verifier
anchor-lang-idl-spec = { workspace = true, optional = true }
anyhow = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
solana-program = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
